# stock_downloader

./: .env.sample  .gitignore  API_RATELIMIT_ISSUE_ANALYSIS_AND_FIX.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  IMPLEMENTATION_PLAN.md  PROGRESS_LOGGING_IMPROVEMENTS.md  PR_TEMPLATE.md  QWEN.md  README.md  REFACTOR_SUMMARY.md  analyze_performance.py  arch.md  check_db_final.py  check_huey_tasks.py  clean_env.sh  cleanup_plan.yaml  compare_dividend_data.py  config.toml  config.yaml  consumer_main.py  create_backup_tag.sh  debug_data_flow.py  debug_fetcher.py  debug_progress.py  debug_stock_basic_with_symbol.py  debug_task_timing.py  debug_test.py  debug_with_logs.py  demo_data_download_stage.py  demo_tqdm_progress.py  kill_consumer.sh  main.py  package-lock.json  performance_test.py  producer_main.py  prototype_tasks.db  pyproject.toml  pytest.ini  (+33 more)
.qwen/: settings.json
.trae/rules/: project_rules.md
docs/: Compaction_and_Sorting.md  TDD原则.py  architecture_design.md  balance_sheet_schema.toml  cash_flow_schema.toml  cleanup_inventory.md  compact_and_sort重构.md  consumer_architecture_design.md  container改造建议.md  dependency_injection_refactor_plan.md  downloader改造建议.md  duckdb_connection_implementation.md  duckdb数据湖改造方案.md  duckdb连接最佳实践总结.md  engine_architecture_analysis.md  income_statement_schema.toml  partitioned_table_architecture_design.md  producer_v2_usage.md  queue_implementation.md  step9_implementation_summary.md  step_6_bulk_insert_summary.md  stock_adj_schema.toml  stock_basic_schema.toml  stock_daily_schema.toml  stock_schema.toml  tushare_downlaoder的改进建议.md  利润表字段信息.md  基于Schema的动态数据库.md  技术演进方案.md  数据存储开发指南.md  日K线数据字段信息.md  智能增量下载方案.md  架构改造方案-多队列优化.md  核心架构.md  每日指标字段信息.md  消费者生产者模式改造.md  现金流量表字段信息.md  股票列表字段信息.md  资产负债表字段信息.md
docs/analysis/: package_choice.md
docs/architecture/: module_dependencies.md
downloader/: cache.py  fetcher.py  storage.py
downloader/consumer/: __init__.py
examples/: HUEY_FIX_README.md  README.md  asyncio_data_buffer.py  blinker_event_demo.py  blinker_with_thread.py  bulk_insert_performance_test.py  combined_decorators_demo.py  compare_rate_limiters.py  config_example.toml  config_interface_demo.py  configurable_rate_limiter_demo.py  consumer_pool_example.py  download_builder.py  fetcher_with_native_rate_limiter.py  huey_prototype.py  log_missing_symbols_demo.py  migration_example.py  minimal_run.py  producer.py  producer_pool_example.py  producer_v2_demo.py  protocol_demo.py  pyrate_limiter_demo.py  queue_manager_example.py  rate_limiter_on_breach_demo.py  retry_policy_example.py  schema_data_operations.py  schema_driven_table_creator.py  test_schema_table_creator.py  test_upsert_functionality.py  thread_local_fetcher_demo.py  tqmd_handler_demo.py
examples/asyncio_prototype/: README.md  README_tqdm.md  advanced_progress_demo.py  amain.py  amain_tqdm.py  config.py  performance_test.py  tasks.py  tasks_tqdm.py  test_pyrate_limiter.py
examples/chain_tasks/: README.md  config.py  mini_demo.py  tasks.py
examples/huey-simple/: amain.py  config.py  tasks.py
examples/huey_multi_instance_prototype/: README.md  config.py  main.py  producer.py  run_consumers.sh  tasks.py
examples/huey_performance/: async_tasks.py  data_generator.py  huey_config.py  huey_performance_test.py  run_test_with_consumer.py  sync_tasks.py
examples/huey_pipeline_async_progress/: config.py  consumer.py  producer_async_progress.py  tasks.py
examples/huey_simple_prototype/: README.md  config.py  consumer.py  mini.py  producer.py  prototype_tasks.db  tasks.py
examples/huey_sqlite_pipeline_async/: README.md  config.py  producer_async.py  tasks.py
examples/rate_limit_simulation/: README.md  rate_limit_demo.py
huey_performance_results/: huey_performance_test_1756002282.json
logs/: downloader.log.2025-08-11  downloader.log.2025-08-12  downloader.log.2025-08-13  example_dead_letter.jsonl  retry_symbols.py
notebook/: tushare.ipynb  verify_data.ipynb  查询表信息.ipynb  验证获取的数据.ipynb
reports/: baseline_coverage.txt  cleanup_execution_report.md  file_tree.txt  low_cov_review.md  test_completion_summary.md  unused_modules.txt
scripts/: check_and_redown.py  check_pipeline_health.py  clean_parquet_none.py  compact_and_sort.py  create_schema.py  create_tables.py  diagnose_parquet_files.py  extract_stock_fields.py  f_and_s_stock_basic.py  huey_monitor.py  init_huey_db.py  manual_sync_metadata.py  query_parquet_data.py  run_metadata_sync_once.py  show_data_summary.py  stock_column_descriptions.toml  validate_data_consistency.py  verify_download_data.py
src/: rate_limiter_native.py
src/downloader/: __init__.py  app.py  buffer_pool.py  config.py  config_impl.py  consumer_pool.py  database.py  dead_letter_cli.py  dead_letter_csv.py  downloader_app.py  engine.py  engine_v2.py  enhanced_queue_manager.py  error_handler.py  event_bus.py  fetcher.py  fetcher_factory.py  interfaces.py  logger_interface.py  logging_setup.py  main.py  missing_symbols.py  models.py  producer.py  producer_pool.py  producer_v2.py  (+12 more)
tests/: conftest.py  debug_file_scan.py  debug_real_parquet_sync.py  debug_sync_process.py  test_app.py  test_app_service.py  test_async_callback_queue_buffer.py  test_async_simple_data_processor.py  test_batch_processing.py  test_batch_saver.py  test_blinker_event_bus.py  test_broken_pipe_fix.py  test_callback_queue_buffer.py  test_category_service.py  test_chinese_api_limit_error.py  test_cli_feedback.py  test_combined_decorators.py  test_compact_and_sort_integration.py  test_comprehensive_engine.py  test_comprehensive_fetcher.py  test_comprehensive_queue_retry.py  test_comprehensive_storage.py  test_config_box.py  test_config_factory.py  test_config_interface.py  test_config_utils.py  test_configurable_rate_limiter.py  test_connection_decorator.py  test_consumer_pool.py  test_containers.py  test_core_regression.py  test_data_download_integration.py  test_data_download_stage.py  test_data_integrity.py  test_data_processing_tasks.py  test_data_processor.py  test_data_processor_factory.py  test_data_processor_manager.py  test_data_processor_stats.py  test_database.py  (+104 more)
(+169 files in other folders)
